--- a/src/main/template/main.handlebars
+++ b/src/main/template/main.handlebars
@@ -1,21 +1,21 @@
-<div id="swagger_sidebar">
+<div id="swagger_sidebar" style="padding-top: 2em">
     <div class="sticky-nav-placeholder">
         <div class="sticky-nav">
             <div class="mobile-nav">
                 <span class="select-label">API Reference: </span><span data-selected-value></span>
             </div>
 
-            <div class="token-generator hide">
+            <div class="token-generator hide hidden" style="display: none !important">
                 <span data-close class="icon-budicon-471"></span>
                 <label for="input-api-token">Url</label>
-                <input type="text" autocorrect="off" class="ui-form-control" id="input_baseUrl"
+                <input type="text" autocorrect="off" disabled="disabled" class="ui-form-control" id="input_baseUrl"
                        placeholder="http://example.com/api">
 
                 <div class="scope-selector">
                     <label for="scopes">Token</label>
 
                     <div class="area controls">
-                        <input type="text" autocorrect="off" class="ui-form-control" id="input_apiKey"
+                        <input type="text" autocorrect="off" disabled="disabled" class="ui-form-control" id="input_apiKey"
                                placeholder="Enter api key or token">
                     </div>
 
